# devopsx

./: .gitignore  LICENSE  Makefile  README.md  devopsx.sh  devopsx.toml  pyproject.toml  setup.py  setup.sh
devopsx/: __init__.py  __main__.py  __version__.py  celery.py  cli.py  cli_server.py  codeblock.py  commands.py  config.py  constants.py  dirs.py  init.py  llm.py  llm_anthropic.py  llm_groq.py  llm_ollama.py  llm_openai.py  logmanager.py  message.py  models.py  prompts.py  reduce.py  server.py  ssh.py  tabcomplete.py  useredit.py  util.py
devopsx/eval/: __init__.py  agents.py  evals.py  execenv.py  filestore.py  main.py  run.py  types.py
devopsx/eval/suites/: __init__.py  basic.py  browser.py  init_projects.py
devopsx/server/: __init__.py  __main__.py  api.py  cli.py
devopsx/server/static/: index.html  style.css
devopsx/terminal/: cli.py
devopsx/tools/: __init__.py  _browser_playwright.py  base.py  bash.py  browser.py  celery.py  celery_app.py  chats.py  gh.py  patch.py  pseudo_shell.py  python.py  read.py  reduce.py  remote_agent.py  save.py  screenshot.py  search_chats.py  shell.py  ssh.py  subagent.py  subthread.py  summarize.py  terminal.py  tmux.py  useredit.py  vision.py  youtube.py
docs/: api.rst  arewetiny.rst  automation.rst  cli.rst  conf.py  demos.rst  evals.rst  examples.rst  finetuning.md  getting-started.rst  index.rst  local-models.md  prompts.rst  providers.md  server.rst  tools.rst  webui.rst
docs/_static/: custom.css
docs/automation/: example_activity_summary.rst  example_code_review.rst
eval/: agents.py  evals.py  main.py  test_eval.py  types.py
gptme/: cli.py  commands.py  config.py  ssh.py
proxies/claude-to-openai/: Dockerfile  README.md  pyproject.toml
proxies/claude-to-openai/claude_to_openai/: adapter.py  app.py  models.py
proxies/claude-to-openai/src/: adapter.py  util.py
proxies/gemini-openai-proxy/: README.md
proxies/gemini-openai-proxy/pkg/adapter/: chat.go  struct.go
scripts/: build_changelog.sh  bump_version.sh  format_log.sh  get-last-version.sh  git-shim.sh  gpt_todoer.py  list_user_messages.py
static/: index.html
tests/: test-integration.sh  test_browser.py  test_cli.py  test_codeblock.py  test_config.py  test_eval.py  test_logmanager.py  test_message.py  test_prompts.py  test_reduce.py  test_server.py  test_shell.py  test_tabcomplete.py  test_tools_chats.py  test_tools_context.py  test_tools_patch.py  test_tools_python.py  test_tools_reduce.py  test_tools_shell.py  test_tools_subagent.py  test_tools_subthread.py  test_util.py
train/: collect.py
