[project]
name = "devopsx-python"
version = "0.5.0"
description = "A fancy CLI to interact with LLMs in a Chat-style interface, with additional capabilities like executing commands on the local & remote machines"
authors = [
    {name = "devopsx", email = "mhafeel@computer.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0.0",
    "rich>=13.5.2",
    "pick>=2.2.0",
    "tiktoken>=0.5.1",
    "tomlkit>=0.12.1",
    "typing-extensions>=4.8.0",
    "platformdirs>=3.11.0",
    "ipython>=8.17.2",
    "bashlex>=0.18",
    "invoke>=2.2.0",
    "fabric>=3.2.2",
    "pyyaml>=6.0.1",
    "playwright>=1.43.0",
    "tabulate>=0.9.0",
    "kombu>=5.3.7",
    "celery>=5.4.0",
    "flower>=2.0.1",
    "greenlet>=3.0.3",
    "pytest-retry>=1.6.3",
    "openai>=1.0",
    "anthropic>=0.34.0",
    "groq>=0.9.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "langchain>=0.2.14",
    "mypy>=1.11.1",
    "setuptools>=73.0.1",
]

[project.optional-dependencies]
server = ["flask>=2.3"]
datascience = ["matplotlib", "pandas", "numpy", "pillow"]
training = ["torch", "transformers"]
all = ["flask>=2.3", "matplotlib", "pandas", "numpy", "pillow", "torch", "transformers"]

[project.scripts]
devopsx = "devopsx.cli:main"
devopsx-server = "devopsx.server.cli:main"
devopsx-eval = "devopsx.eval.main:main"
devopsx-celery = "devopsx.celery:main"

[tool.ruff]
select = ["E4", "E7", "E9", "F", "B", "UP"]
ignore = ["E402", "E501"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "eval: marks tests as evals (deselect with '-m \"not eval\"'), these may fail, and will not run in CI",
    "serial",
]

[tool.coverage.run]
concurrency = ["greenlet"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "except KeyboardInterrupt:",
    "if interactive:",
    "if ask:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
