[tool.poetry]
name = "claude-to-openai"
version = "0.1.0"
description = ""
authors = ["Mohamed Hafeel <mhafeel@computer.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9.16"
tiktoken = "^0.4.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
socksio = "^1.0.0"
anthropic = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
